--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" type="text/css" href="/client.css">
+    <link rel="stylesheet" type="text/css" href="/webresources/client.css">
 </head>
 <body>
 <div id="content"><div>{{{content}}}</div></div>
-<script type="text/javascript" src="/bundle.client.js"></script>
+<script type="text/javascript" src="/webresources/bundle.client.js"></script>
 </body>
 </html>
